--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -9,50 +9,57 @@
 	<packaging>bundle</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		<bundle.version>0.1.0</bundle.version>
+		<sqldev.basedir>/Applications/SQLDeveloper4.1.1.app/Contents/Resources/sqldeveloper</sqldev.basedir>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>idert</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/lib/idert.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>javatools-nodeps</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/modules/oracle.javatools/javatools-nodeps.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>javatools</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/lib/javatools.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>oracle.ide.ceditor</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/extensions/oracle.ide.ceditor.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>oracle.ide</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/extensions/oracle.ide.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>uic</artifactId>
 			<version>12.1.3.0.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/lib/uic.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>6.0.0</version>
+			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -152,7 +159,7 @@
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>test</phase>
+						<phase>prepare-package</phase>
 						<configuration>
 							<tasks>
 								<copy failonerror="true" file="sqldeveloper.xml" tofile="target/sqldeveloper.xml" />
@@ -322,8 +329,8 @@
 		<url>https://github.com/PhilippSalvisberg/oddgen</url>
 	</scm>
 	<prerequisites>
-		<!-- SQL Developer 4.1.1 installation for provided Oracle dependencies -->
-		<!-- JDK 1.8 -->
+		<!-- SQL Developer 4.1.1 installation for (provided) Oracle dependencies, see sqldev.basedir -->
+		<!-- JDK 1.7 -->
 		<maven>3.1.1</maven>
 	</prerequisites>
 </project>
