--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -63,8 +63,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.xtend</groupId>
+			<artifactId>org.eclipse.xtend.lib</artifactId>
+			<version>2.8.4</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
+			<artifactId>spring-jdbc</artifactId>
 			<version>4.2.4.RELEASE</version>
 		</dependency>
 		<dependency>
@@ -77,6 +83,8 @@
 
 	<!-- Build Settings -->
 	<build>
+		<sourceDirectory>${project.basedir}/src/main/xtend-gen</sourceDirectory>
+		<testSourceDirectory>${project.basedir}/src/test/xtend-gen</testSourceDirectory>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -115,6 +123,33 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>2.8.4</version>
+				<executions>
+					<execution>
+						<id>main</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<javaSourceVersion>${jdk.version}</javaSourceVersion>
+							<outputDirectory>${project.basedir}/src/main/xtext-gen</outputDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>test</id>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+						<configuration>
+							<javaSourceVersion>${jdk.version}</javaSourceVersion>
+							<testOutputDirectory>${project.basedir}/src/test/xtext-gen</testOutputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
 				<executions>
@@ -126,7 +161,6 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!--  <format>{0,date,yyyyMMddHHmmss}</format>-->
 					<format>{0,date,yyyyMMdd.HHmmss}</format>
 					<items>
 						<item>timestamp</item>
@@ -203,7 +237,8 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>3.0.1</version>
+				<!-- version 3.0.1 throws null pointer exception -->
+				<version>2.5.4</version>
 				<extensions>true</extensions>
 				<configuration>
 					<finalName>${project.name}</finalName>
@@ -329,7 +364,7 @@
 		<url>https://github.com/PhilippSalvisberg/oddgen</url>
 	</scm>
 	<prerequisites>
-		<!-- SQL Developer 4.1.1 installation for (provided) Oracle dependencies, see sqldev.basedir -->
+		<!-- SQL Developer 4.1.1 installation for Oracle dependencies, see sqldev.basedir -->
 		<!-- JDK 1.7 -->
 		<maven>3.1.1</maven>
 	</prerequisites>
