--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -17,44 +17,58 @@
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>idert</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.0</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/lib/idert.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>javatools-nodeps</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.0</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/modules/oracle.javatools/javatools-nodeps.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>javatools</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.0</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/lib/javatools.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>oracle.ide.ceditor</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.0</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/extensions/oracle.ide.ceditor.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>oracle.ide</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.0</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/extensions/oracle.ide.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>uic</artifactId>
-			<version>12.1.3.0.0</version>
+			<version>12.2.2</version>
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/lib/uic.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>oracle</groupId>
+			<artifactId>oracle.sqldeveloper.utils</artifactId>
+			<version>12.2.0</version>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/sqldeveloper/extensions/oracle.sqldeveloper.utils.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>oracle</groupId>
+			<artifactId>oracle.ide.navigator</artifactId>
+			<version>12.2.0</version>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/extensions/oracle.ide.navigator.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
@@ -63,15 +77,33 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<!-- Xtend comes with some runtime dependencies... -->
+			<!-- using older version just because upgrade to 2.9.1 failed in Eclipse -->
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>2.8.4</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<!-- configure annotated logging via class com.jcabi, see https://github.com/jcabi/jcabi-aspects/issues/156 -->
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-aspects</artifactId>
+			<version>0.22.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.2.4.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -101,28 +133,6 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<version>3.3</version>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-					<includes>
-						<include>**/*.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19</version>
-				<configuration>
-					<includes>
-						<include>**/*.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
 				<version>2.8.4</version>
@@ -150,6 +160,40 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<version>3.3</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.jcabi</groupId>
+				<artifactId>jcabi-maven-plugin</artifactId>
+				<version>0.13.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>ajc</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
 				<executions>
@@ -166,28 +210,6 @@
 						<item>timestamp</item>
 					</items>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.10</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/classes/lib</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-							<excludeTransitive>false</excludeTransitive>
-							<includeScope>runtime</includeScope>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -252,16 +274,52 @@
 							trivadis.oddgen.sqldev,
 							trivadis.oddgen.sqldev.model,
 							trivadis.oddgen.sqldev.resources,
-							trivadis.oddgen.sqldev.ui
 						</Export-Package>
+						<!-- TODO: remove unnecessary bundles, missing bundles might lead to 
+							strange runtime behavior, therefore the list is extensive -->
 						<Require-Bundle>
+							oracle.external.nlsrtl,
+							oracle.external.xmlparser,
+							oracle.javatools,
+							oracle.javatools-nodeps,
 							oracle.ide,
 							oracle.ide.ceditor,
-							oracle.javatools-nodeps,
-							oracle.javatools,
+							oracle.ide.status,
+							oracle.ide.audit,
+							oracle.peek,
+							oracle.ide.navigator,
+							oracle.ide.runner,
+							oracle.ide.webbrowser,
+							oracle.ide.externaltools,
+							oracle.ide.inspector,
+							oracle.ide.palette2,
 							oracle.uic,
 							oracle.idert,
-							oracle.ide
+							oracle.javaxide,
+							oracle.icons,
+							oracle.jdeveloper.java.core,
+							oracle.jdeveloper.common,
+							oracle.layout-managers,
+							oracle.db-api,
+							oracle.db-api-impl,
+							oracle.db-ca,
+							oracle.jdev-cm,
+							oracle.ide.db,
+							oracle.jdeveloper.db.connection,
+							oracle.ide.db.explorer,
+							oracle.jewt-dbui,
+							oracle.orahelp-helpshare,
+							oracle.orahelp-ohj,
+							oracle.external.oracle-ice,
+							oracle.balipi,
+							oracle.jewt-core,
+							oracle.external.balishare,
+							oracle.external.jdbc,
+							oracle.sqldeveloper,
+							oracle.sqldeveloper.utils-nodeps,
+							oracle.sqldeveloper.utils,
+							oracle.sqldeveloper.worksheet,
+							oracle.external.itext
 						</Require-Bundle>
 						<Import-Package>!*</Import-Package>
 						<Embed-Directory>lib</Embed-Directory>
