add PreferenceMode test case and configure logging for tests via Maven

--- a/sqldev/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/sqldev/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -1,8 +1,11 @@
-//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend-gen.directory=src/main/xtext-gen
-//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/xtend-gen.directory=src/test/xtext-gen
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend-gen.directory=src/main/xtend-gen
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend-gen.ignore=false
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/xtend.directory=src/main/xtend-gen
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/xtend-gen.directory=src/test/xtend-gen
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/xtend-gen.ignore=false
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/xtend.directory=src/test/xtend-gen
 BuilderConfiguration.is_project_specific=true
 eclipse.preferences.version=1
-org.eclipse.xtend.core.Xtend.useProjectSettings=true
 outlet.DEFAULT_OUTPUT.directory=src/main/xtend-gen
 outlet.DEFAULT_OUTPUT.hideLocalSyntheticVariables=true
 outlet.DEFAULT_OUTPUT.installDslAsPrimarySource=false
