--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -211,6 +211,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<configuration>
+				<argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.conf</argLine>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
@@ -454,6 +455,23 @@
 										</versionRange>
 										<goals>
 											<goal>parse-version</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.jcabi</groupId>
+										<artifactId>
+											jcabi-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.13.2,)
+										</versionRange>
+										<goals>
+											<goal>ajc</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
