--- a/sqldev/src/test/resources/logging.conf
+++ b/sqldev/src/test/resources/logging.conf
@@ -1,8 +1,11 @@
-# logging properties for Oracle SQL Developer
+# logging properties for Oracle SQL Developer and oddgen unit test cases
 # replace logging.conf in /Applications/SQLDeveloper4.1.3.app/Contents/Resources/sqldeveloper/sqldeveloper/bin
 
 #handlers for console (messages pane in SQL Developer) and file ($HOME/sqldeveloper.log)
-handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+#handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+
+#handler for console only
+handlers=java.util.logging.ConsoleHandler
 
 # Default global logging level. 
 .level=SEVERE
@@ -13,8 +16,9 @@ trivadis.level=ALL
 com.jcabi=ALL
 
 # --- ConsoleHandler --- 
-java.util.logging.ConsoleHandler.level=ALL 
+java.util.logging.ConsoleHandler.level=FINE
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %2$s %4$s: %5$s%n
 
 # --- FileHandler --- 
 java.util.logging.FileHandler.level=ALL
