extended model (folder, generator), moved logging annotations from method to class level, various renames

--- a/sqldev/src/main/resources/trivadis/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/trivadis/oddgen/sqldev/resources/OddgenResources.properties
@@ -18,3 +18,8 @@ VIEW_MENU_LABEL=Generators
 NAVIGATOR_TITLE=Generators
 ROOT_NODE_SHORT_LABEL=oddgen
 ROOT_NODE_LONG_LABEL=All Generators
+CLIENT_GEN_NODE_SHORT_LABEL=Client
+CLIENT_GEN_NODE_LONG_LABEL=Client Generators
+DBSERVER_GEN_NODE_SHORT_LABEL=DB Servers
+DBSERVER_GEN_NODE_LONG_LABEL=Database Server Generators
+
