--- a/sqldev/src/test/resources/logging.conf
+++ b/sqldev/src/test/resources/logging.conf
@@ -4,7 +4,7 @@
 #handlers for console (messages pane in SQL Developer) and file ($HOME/sqldeveloper.log)
 #handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-#handler for console only
+#handler for console only (will be shown in Messages pane within SQL Developer)
 handlers=java.util.logging.ConsoleHandler
 
 # Default global logging level. 
@@ -18,14 +18,13 @@ com.jcabi=ALL
 # --- ConsoleHandler --- 
 java.util.logging.ConsoleHandler.level=FINE
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %2$s %4$s: %5$s%n
+java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %2$s %3$s: %5$s%n
 
 # --- FileHandler --- 
 java.util.logging.FileHandler.level=ALL
 
 # Naming style for the output file: 
-# (The output file is placed in the directory 
-# defined by the "user.home" System property.) 
+# (The output file is placed in the directory defined by the "user.home" System property.) 
 java.util.logging.FileHandler.pattern=%h/sqldeveloper.log
 
 # Limiting size of output file in bytes: 
