--- a/sqldev/src/test/resources/logging.conf
+++ b/sqldev/src/test/resources/logging.conf
@@ -12,7 +12,7 @@ handlers=java.util.logging.ConsoleHandler
 
 # Loggers 
 oracle.level=FINE
-trivadis.level=ALL
+org.oddgen.level=ALL
 com.jcabi=ALL
 
 # --- ConsoleHandler --- 
