--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -92,6 +92,13 @@
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/sqldeveloper/extensions/oracle.sqldeveloper.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.2.0</version>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/jdbc/lib/ojdbc6.jar</systemPath>
+		</dependency>
 		<!-- SQL Developer specific dependencies part 2 (available in public maven repositories) -->
 		<dependency>
 			<!-- SQL Developer is using this older version -->
@@ -134,16 +141,14 @@
 		<!-- other dependencies -->
 		<dependency>
 			<!-- Xtend comes with some runtime dependencies... -->
-			<!-- using older version just because upgrade to 2.9.1 failed in Eclipse -->
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>2.8.4</version>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>4.2.4.RELEASE</version>
-			<scope>test</scope>
+			<version>4.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -175,7 +180,7 @@
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<version>2.8.4</version>
+				<version>2.9.2</version>
 				<executions>
 					<execution>
 						<id>main</id>
