--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -99,6 +99,13 @@
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/jdbc/lib/ojdbc6.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>oracle</groupId>
+			<artifactId>dbapi</artifactId>
+			<version>12.2.1</version>
+			<scope>system</scope>
+			<systemPath>${sqldev.basedir}/ide/lib/dbapi.jar</systemPath>
+		</dependency>
 		<!-- SQL Developer specific dependencies part 2 (available in public maven repositories) -->
 		<dependency>
 			<!-- SQL Developer is using this older version -->
