added icons for object type folders

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -9,8 +9,11 @@ REFRESH_ICON=/org/oddgen/sqldev/resources/images/refresh.png
 COLLAPSEALL_ICON=/org/oddgen/sqldev/resources/images/collapseall.png
 ODDGEN_FOLDER_ICON=/org/oddgen/sqldev/resources/images/oddgen_folder.png
 ODDGEN_ICON=/org/oddgen/sqldev/resources/images/oddgen.png
+TABLE_FOLDER_ICON=/org/oddgen/sqldev/resources/images/table_folder.png
 TABLE_ICON=/org/oddgen/sqldev/resources/images/table.png
+VIEW_FOLDER_ICON=/org/oddgen/sqldev/resources/images/view_folder.png
 VIEW_ICON=/org/oddgen/sqldev/resources/images/view.png
+UNKNOWN_FOLDER_ICON=/org/oddgen/sqldev/resources/images/unknown_folder.png
 UNKNOWN_ICON=/org/oddgen/sqldev/resources/images/unknown.png
 
 # Text
@@ -22,4 +25,3 @@ CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Client Generators
 DBSERVER_GEN_NODE_SHORT_LABEL=DB Servers
 DBSERVER_GEN_NODE_LONG_LABEL=Database Server Generators
-
