context menu on ObjectName node.

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -25,3 +25,6 @@ CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Client Generators
 DBSERVER_GEN_NODE_SHORT_LABEL=DB Servers
 DBSERVER_GEN_NODE_LONG_LABEL=Database Server Generators
+CTX_MENU_GEN_TO_WORKSHEET_LABEL=Generate to worksheet
+CTX_MENU_GEN_TO_CLIPBOARD_LABEL=Generate to clipboard
+CTX_MENU_GEN_DIALOG_LABEL=Generate...
