--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -347,6 +347,10 @@
 							<value>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${buildNumber}</value>
 						</replacement>
 						<replacement>
+							<token>#EXTENSION_SHORT_VERSION#</token>
+							<value>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</value>
+						</replacement>
+						<replacement>
 							<token>#EXTENSION_DEPLOYABLE#</token>
 							<value>${final.name}.zip</value>
 						</replacement>
