Resolves #12 - use resource bundles for translatable text. Provide English, German, French and Italian versions.

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -1,8 +1,4 @@
-# Translatable resources for extension com.trivadis.tvdcc
-
-# Externally used constants (pom.xml, bundle.xml, extension.xml, sqldeveloper.xml)
-EXTENSION_NAME=oddgen for SQL Developer
-EXTENSION_OWNER=Philipp Salvisberg
+# English (default) resources for extension org.oddgen.sqldev
 
 # Icons
 REFRESH_ICON=/org/oddgen/sqldev/resources/images/refresh.png
@@ -16,15 +12,32 @@ VIEW_ICON=/org/oddgen/sqldev/resources/images/view.png
 UNKNOWN_FOLDER_ICON=/org/oddgen/sqldev/resources/images/unknown_folder.png
 UNKNOWN_ICON=/org/oddgen/sqldev/resources/images/unknown.png
 
-# Text
+# Externally used constants (pom.xml, bundle.xml, extension.xml, sqldeveloper.xml)
+EXTENSION_NAME=oddgen for SQL Developer
+EXTENSION_OWNER=Philipp Salvisberg
+
+# Translatable text
 VIEW_MENU_LABEL=Generators
 NAVIGATOR_TITLE=Generators
 ROOT_NODE_SHORT_LABEL=oddgen
 ROOT_NODE_LONG_LABEL=All Generators
 CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Client Generators
-DBSERVER_GEN_NODE_SHORT_LABEL=DB Servers
+DBSERVER_GEN_NODE_SHORT_LABEL=DB Server
 DBSERVER_GEN_NODE_LONG_LABEL=Database Server Generators
 CTX_MENU_GEN_TO_WORKSHEET_LABEL=Generate to worksheet
 CTX_MENU_GEN_TO_CLIPBOARD_LABEL=Generate to clipboard
 CTX_MENU_GEN_DIALOG_LABEL=Generate...
+DIALOG_TITLE=oddgen
+DIALOG_GENERATE_TO_WORKSHEET_BUTTON=Generate to worksheet
+DIALOG_GENERATE_TO_CLIPBOARD_BUTTON=Generate to clipboard
+DIALOG_CANCEL_BUTTON=Cancel
+DIALOG_OBJECT_TYPE_PARAM=Object type
+DIALOG_OBJECT_NAME_PARAM=Object name
+NODE_TABLES_DISPLAY_NAME=Tables
+NODE_VIEWS_DISPLAY_NAME=Views
+WORKSHEET_TITLE=oddgen
+MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
+MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Code generated to your clipboard.
+PREF_DISCOVER_PLSQL_GENERATORS_LABEL=&Discover PL/SQL generators:
+PREF_DISCOVER_PLSQL_GENERATORS_HINT=If checked, PL/SQL generators are immediately discovered when the refresh button is pressed, otherwise the discovery process is delayed until the folder is opened.
