--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -247,7 +247,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<configuration>
-				<argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.conf</argLine>
+				<!-- -noverify is required in some environments to avoid java.lang.VerifyError -->
+				<argLine>-noverify -Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.conf</argLine>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
