--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -14,7 +14,8 @@
 		<final.name>oddgen_for_SQLDev_${project.version}</final.name>
 	</properties>
 	<dependencies>
-		<!-- SQL Developer specific dependencies part 1 (not available in public maven repositories) -->
+		<!-- SQL Developer specific dependencies part 1 (not available in public 
+			maven repositories) -->
 		<dependency>
 			<groupId>oracle</groupId>
 			<artifactId>idert</artifactId>
@@ -113,7 +114,8 @@
 			<scope>system</scope>
 			<systemPath>${sqldev.basedir}/ide/lib/dbapi.jar</systemPath>
 		</dependency>
-		<!-- SQL Developer specific dependencies part 2 (available in public maven repositories) -->
+		<!-- SQL Developer specific dependencies part 2 (available in public maven 
+			repositories) -->
 		<dependency>
 			<!-- SQL Developer is using this older version -->
 			<groupId>org.osgi</groupId>
@@ -147,7 +149,8 @@
 			<version>1.8.7</version>
 		</dependency>
 		<dependency>
-			<!-- binds slf4j to java.util.logging (used by SQL Developer), see implementations on http://www.slf4j.org/ -->
+			<!-- binds slf4j to java.util.logging (used by SQL Developer), see implementations 
+				on http://www.slf4j.org/ -->
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.7.21</version>
@@ -247,8 +250,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<configuration>
-				<!-- -noverify is required in some environments to avoid java.lang.VerifyError -->
-				<argLine>-noverify -Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.conf</argLine>
+					<!-- -noverify is required in some environments to avoid java.lang.VerifyError -->
+					<argLine>-noverify
+						-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.conf</argLine>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
@@ -563,14 +567,27 @@
 		<system>GitHub Issues</system>
 	</issueManagement>
 	<scm>
-		<connection>scm:git:git://github.com/PhilippSalvisberg/oddgen.git</connection>
-		<developerConnection>scm:git:git@github.com:PhilippSalvisberg/oddgen.git</developerConnection>
-		<tag>HEAD</tag>
-		<url>https://github.com/PhilippSalvisberg/oddgen/</url>
+		<connection>scm:git:git://github.com/oddgen/oddgen.git</connection>
+		<developerConnection>scm:git:git@github.com:oddgen/oddgen.git</developerConnection>
+		<tag>master</tag>
+		<url>https://github.com/oddgen/oddgen/</url>
 	</scm>
 	<prerequisites>
 		<!-- SQL Developer 4.1.3 installation for Oracle dependencies, see sqldev.basedir -->
-		<!-- JDK 1.7 to ensure compatiblity to SQL Developer 4.0.x, using JDK 1.8 with target 1.7 should be OK -->
+		<!-- JDK 1.7 to ensure compatiblity to SQL Developer 4.0.x, using JDK 1.8 
+			with target 1.7 should be OK -->
 		<maven>3.1.1</maven>
 	</prerequisites>
+
+	<!-- Distribution Management for Maven Central Repository -->
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 </project>
