configure maven-source-plugin, maven-javadoc-plugin, nexus-staging-maven-plugin

--- a/sqldev/.settings/org.eclipse.core.resources.prefs
+++ b/sqldev/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,5 @@ encoding//src/main/xtend-gen=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
 encoding//src/test/xtend-gen=UTF-8
+encoding//target/classes=UTF-8
 encoding/<project>=UTF-8
