--- a/sqldev/src/test/resources/test.properties
+++ b/sqldev/src/test/resources/test.properties
@@ -1,5 +1,5 @@
 # properties to connect to Oracle Database using JDBC thin driver
-host=192.168.1.10
+host=localhost
 port=1521
 service=xe.oracle.docker
 
