new preference "Client generator examples", renamed "PL/SQL generators" to "Database server generators"

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -136,5 +136,7 @@ NODE_XML_SCHEMA_DISPLAY_NAME=XML Schemas
 WORKSHEET_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Code generated to your clipboard.
-PREF_DISCOVER_PLSQL_GENERATORS_LABEL=&Discover PL/SQL generators:
-PREF_DISCOVER_PLSQL_GENERATORS_HINT=If checked, PL/SQL generators are immediately discovered when the refresh button is pressed, otherwise the discovery process is delayed until the folder is opened.
+PREF_DISCOVER_DB_SERVER_GENERATORS_LABEL=&Discover database server generators:
+PREF_DISCOVER_DB_SERVER_GENERATORS_HINT=If checked, generators are immediately discovered when the refresh button is pressed, otherwise the discovery process is delayed until the folder is opened.
+PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client generator examples:
+PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=If checked, the generators "Hello World" and "1:1 View" are shown.
