--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -5,7 +5,7 @@
 	<!-- The Basics -->
 	<groupId>org.oddgen</groupId>
 	<artifactId>org.oddgen.sqldev</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -331,27 +331,6 @@
 							<goal>parse-version</goal>
 						</goals>
 					</execution>
-					<!--
-					<execution>
-                       <id>attach-artifacts</id>
-                       <phase>package</phase>
-                       <goals>
-                           <goal>attach-artifact</goal>
-                       </goals>
-                       <configuration>
-                           <artifacts>
-                               <artifact>
-                                   <file>${project.basedir}/target/${project.name}.jar</file>
-                                   <type>jar</type>
-                               </artifact>                               
-                               <artifact>
-                                   <file>${project.basedir}/target/${project.name}-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.pom</file>
-                                   <type>pom</type>
-                               </artifact>                               
-                           </artifacts>
-                       </configuration>
-                   </execution>
-                   -->
 				</executions>
 			</plugin>
 			<plugin>
