--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -5,7 +5,7 @@
 	<!-- The Basics -->
 	<groupId>org.oddgen</groupId>
 	<artifactId>org.oddgen.sqldev</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.2.1</version>
 	<packaging>bundle</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -128,7 +128,7 @@
 			<!-- configure annotated logging via class com.jcabi, see https://github.com/jcabi/jcabi-aspects/issues/156 -->
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-aspects</artifactId>
-			<version>0.22.4</version>
+			<version>0.22.5</version>
 		</dependency>
 		<dependency>
 			<!-- override dependency from jcabi-aspects -->
@@ -140,13 +140,13 @@
 			<!-- override dependency from jcabi-aspects -->
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.8.7</version>
+			<version>1.8.9</version>
 		</dependency>
 		<dependency>
 			<!-- required for jcabi-aspects when weaving Java 1.8 classes -->
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjtools</artifactId>
-			<version>1.8.7</version>
+			<version>1.8.9</version>
 		</dependency>
 		<dependency>
 			<!-- binds slf4j to java.util.logging (used by SQL Developer), see implementations 
@@ -158,6 +158,7 @@
 		<!-- other dependencies -->
 		<dependency>
 			<!-- Xtend comes with some runtime dependencies... -->
+			<!-- cannot resolve plugin-dependencies for 2.10.0, fallback to 2.9.2  --> 
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>2.9.2</version>
@@ -170,7 +171,7 @@
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
-			<version>0.9.9-RC1</version>
+			<version>0.9.10</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -202,6 +203,7 @@
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
+				<!-- cannot resolve plugin-dependencies for 2.10.0, fallback to 2.9.2  -->
 				<version>2.9.2</version>
 				<executions>
 					<execution>
@@ -228,7 +230,7 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<version>3.3</version>
+				<version>3.5.1</version>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${jdk.version}</source>
@@ -241,7 +243,7 @@
 			<plugin>
 				<groupId>com.jcabi</groupId>
 				<artifactId>jcabi-maven-plugin</artifactId>
-				<version>0.13.2</version>
+				<version>0.14</version>
 				<executions>
 					<execution>
 						<goals>
@@ -253,7 +255,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19</version>
+				<version>2.19.1</version>
 				<configuration>
 					<!-- -noverify is required in some environments to avoid java.lang.VerifyError -->
 					<argLine>-noverify
@@ -266,6 +268,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
+				<!-- version inherited from plugin section -->
 				<executions>
 					<execution>
 						<phase>validate</phase>
@@ -282,7 +285,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
 				<executions>
 					<execution>
 						<phase>prepare-package</phase>
@@ -499,7 +504,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>2.10.4</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -556,7 +561,7 @@
 											build-helper-maven-plugin
 										</artifactId>
 										<versionRange>
-											[1.8,)
+											[1.10,)
 										</versionRange>
 										<goals>
 											<goal>parse-version</goal>
@@ -573,7 +578,7 @@
 											jcabi-maven-plugin
 										</artifactId>
 										<versionRange>
-											[0.13.2,)
+											[0.14,)
 										</versionRange>
 										<goals>
 											<goal>ajc</goal>
@@ -599,7 +604,7 @@
 	<!-- More Project Information -->
 	<name>org.oddgen.sqldev</name>
 	<description>oddgen for SQL Developer provides tooling for dictionary driven code generators.</description>
-	<url>https://github.com/PhilippSalvisberg/oddgen/</url>
+	<url>https://github.com/oddgen/oddgen</url>
 	<inceptionYear>2015</inceptionYear>
 	<licenses>
 		<license>
@@ -608,6 +613,10 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<organization>
+		<name>oddgen</name>
+		<url>https://www.oddgen.org/</url>
+	</organization>
 	<developers>
 		<developer>
 			<email>philipp.salvisberg@trivadis.com</email>
@@ -623,8 +632,8 @@
 
 	<!-- Environment Settings -->
 	<issueManagement>
-		<url>https://github.com/PhilippSalvisberg/oddgen/issues/</url>
 		<system>GitHub Issues</system>
+		<url>https://github.com/oddgen/oddgen/issues</url>
 	</issueManagement>
 	<scm>
 		<connection>scm:git:git://github.com/oddgen/oddgen.git</connection>
