--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,14 @@
 *.DS_Store
 *.log
 **/target
+**/bin
 **/test-output
 **/xtend-gen
 **/xtext-gen
+**/.sonar
+**/.project
+**/.classpath
+**/.settings
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -18,5 +23,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-**/.sonar/
