add icons for folder, code_folder and data_folder to oddgen resource bundle.

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -45,6 +45,9 @@ OBJECT_FOLDER_ICON=/oracle/dbtools/raptor/images/object_folder.png
 OBJECT_ICON=/oracle/javatools/icons/object.png
 UNKNOWN_FOLDER_ICON=/org/oddgen/sqldev/resources/images/unknown_folder.png
 UNKNOWN_ICON=/org/oddgen/sqldev/resources/images/unknown.png
+FOLDER_ICON=/org/oddgen/sqldev/resources/images/folder.png
+CODE_FOLDER_ICON=/org/oddgen/sqldev/resources/images/code_folder.png
+DATA_FOLDER_ICON=/org/oddgen/sqldev/resources/images/data_folder.png
 
 
 # Externally used constants (pom.xml, bundle.xml, extension.xml, sqldeveloper.xml)
