--- a/sqldev/pom.xml
+++ b/sqldev/pom.xml
@@ -10,6 +10,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk.version>1.7</jdk.version>
+		<jdk.version.test>1.8</jdk.version.test>
+		<xtend.version>2.12.0</xtend.version>
 		<sqldev.basedir>/Applications/SQLDeveloper17.2.0.app/Contents/Resources/sqldeveloper</sqldev.basedir>
 		<final.name>oddgen_for_SQLDev_${project.version}</final.name>
 	</properties>
@@ -128,13 +130,13 @@
 			<!-- configure annotated logging via class com.jcabi, see https://github.com/jcabi/jcabi-aspects/issues/156 -->
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-aspects</artifactId>
-			<version>0.22.5</version>
+			<version>0.22.6</version>
 		</dependency>
 		<dependency>
 			<!-- override dependency from jcabi-aspects -->
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-log</artifactId>
-			<version>0.17.1</version>
+			<version>0.17.2</version>
 		</dependency>
 		<dependency>
 			<!-- override dependency from jcabi-aspects -->
@@ -153,15 +155,15 @@
 				on http://www.slf4j.org/ -->
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.7.21</version>
+			<version>1.7.25</version>
 		</dependency>
 		<!-- other dependencies -->
 		<dependency>
 			<!-- Xtend comes with some runtime dependencies... -->
-			<!-- cannot resolve plugin-dependencies for 2.10.0, fallback to 2.9.2  --> 
+			<!-- cannot resolve plugin-dependencies for 2.10.0, fallback to ${xtend.version}  --> 
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>2.9.2</version>
+			<version>${xtend.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -197,8 +199,7 @@
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<!-- cannot resolve plugin-dependencies for 2.10.0, fallback to 2.9.2  -->
-				<version>2.9.2</version>
+				<version>${xtend.version}</version>
 				<executions>
 					<execution>
 						<id>main</id>
@@ -216,7 +217,7 @@
 							<goal>testCompile</goal>
 						</goals>
 						<configuration>
-							<javaSourceVersion>${jdk.version}</javaSourceVersion>
+							<javaSourceVersion>${jdk.version.test}</javaSourceVersion>
 							<testOutputDirectory>${project.basedir}/src/test/xtend-gen</testOutputDirectory>
 						</configuration>
 					</execution>
@@ -224,20 +225,37 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<version>3.5.1</version>
+				<version>3.6.2</version>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<!-- used by Maven build -->
+					<testSource>${jdk.version.test}</testSource>
+					<testTarget>${jdk.version.test}</testTarget>
 					<includes>
 						<include>**/*.java</include>
 					</includes>
 				</configuration>
+				<executions>
+					<!-- used by Eclipse when updating project -->
+					<execution>
+						<id>test-compile</id>
+						<phase>process-test-sources</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+						<configuration>
+							<source>${jdk.version.test}</source>
+							<target>${jdk.version.test}</target>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>com.jcabi</groupId>
 				<artifactId>jcabi-maven-plugin</artifactId>
-				<version>0.14</version>
+				<version>0.14.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -249,7 +267,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.20</version>
 				<configuration>
 					<!-- -noverify is required in some environments to avoid java.lang.VerifyError -->
 					<argLine>-noverify
@@ -322,7 +340,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.10</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>parse-version</id>
@@ -378,7 +396,7 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<!-- version 3.0.1 throws null pointer exception -->
-				<version>2.5.4</version>
+				<version>3.3.0</version>
 				<extensions>true</extensions>
 				<configuration>
 					<finalName>${project.name}</finalName>
@@ -447,7 +465,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.0.0</version>
 				<configuration>
 					<finalName>${final.name}</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
@@ -483,7 +501,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -511,7 +529,7 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
+				<version>1.6.8</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
@@ -535,7 +553,7 @@
 									<pluginExecutionFilter>
 										<groupId>org.apache.maven.plugins</groupId>
 										<artifactId>maven-dependency-plugin</artifactId>
-										<versionRange>[2.10.0,)</versionRange>
+										<versionRange>[3.0.1,)</versionRange>
 										<goals>
 											<goal>copy-dependencies</goal>
 										</goals>
@@ -553,7 +571,7 @@
 											build-helper-maven-plugin
 										</artifactId>
 										<versionRange>
-											[1.10,)
+											[3.0.0,)
 										</versionRange>
 										<goals>
 											<goal>parse-version</goal>
@@ -570,7 +588,7 @@
 											jcabi-maven-plugin
 										</artifactId>
 										<versionRange>
-											[0.14,)
+											[0.14.1,)
 										</versionRange>
 										<goals>
 											<goal>ajc</goal>
@@ -633,12 +651,6 @@
 		<tag>master</tag>
 		<url>https://github.com/oddgen/oddgen/</url>
 	</scm>
-	<prerequisites>
-		<!-- SQL Developer 4.1.3 installation for Oracle dependencies, see sqldev.basedir -->
-		<!-- JDK 1.7 to ensure compatiblity to SQL Developer 4.0.x, using JDK 1.8 
-			with target 1.7 should be OK -->
-		<maven>3.1.1</maven>
-	</prerequisites>
 
 	<!-- Distribution Management for Maven Central Repository -->
 	<distributionManagement>
