replace OBJECT_TYPE/OBJECT_NAME with NODE_ID

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -70,8 +70,7 @@ DIALOG_TITLE=oddgen
 DIALOG_GENERATE_TO_WORKSHEET_BUTTON=Generate to worksheet
 DIALOG_GENERATE_TO_CLIPBOARD_BUTTON=Generate to clipboard
 DIALOG_CANCEL_BUTTON=Cancel
-DIALOG_OBJECT_TYPE_PARAM=Object type
-DIALOG_OBJECT_NAME_PARAM=Object name
+DIALOG_NODE_ID_PARAM=Node identifier
 NODE_TABLE_DISPLAY_NAME=Tables
 NODE_TABLE_PARTITION_DISPLAY_NAME=Table Partitions
 NODE_TABLE_SUBPARTITION_DISPLAY_NAME=Table Subpartitions
