Provide oddgen_types.pks and oddgen_interface.pks as resources

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -54,6 +54,10 @@ DATA_FOLDER_ICON=/org/oddgen/sqldev/resources/images/data_folder.png
 EXTENSION_NAME=oddgen for SQL Developer
 EXTENSION_OWNER=Philipp Salvisberg
 
+# File templates
+ODDGEN_INTERFACE_PKS_FILE=/org/oddgen/sqldev/resources/oddgen_interface.pks
+ODDGEN_TYPES_PKS_FILE=/org/oddgen/sqldev/resources/oddgen_types.pks
+
 # Translatable text
 VIEW_MENU_LABEL=Generators
 NAVIGATOR_TITLE=Generators
