Preferences for default generator folder names
Add preferences for default folder values of Client Generators and
Database Server Generators. Used for 
- generators without a get_folder implementation
- as default folder for new generators

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources.properties
@@ -150,3 +150,7 @@ PREF_BULK_PROCESS_LABEL=&Bulk process:
 PREF_BULK_PROCESS_HINT=If checked, an anonymous PL/SQL block is sent to the database server to generate the result for all selected nodes.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client generator examples:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=If checked, the generators "Hello World" and "1:1 View" are shown.
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_LABEL=&Default client generator folder
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_HINT=Folder for client generators, if the get_folder function is not implemented.
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_LABEL=Default database &server generator folder
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_HINT=Folder for database server generators, if the get_folder function is not implemented.
